<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context="com.csbgroup.myphr.ChangePINActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ImageView
        android:id="@+id/iconLoginStart"
        android:contentDescription="@string/icon_desc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#FFFF"
        android:textSize="10pt"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="220dp" />

    <com.andrognito.pinlockview.IndicatorDots
        android:id="@+id/indicator_dots_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        app:dotDiameter="20dp" />

    <com.andrognito.pinlockview.PinLockView
        android:id="@+id/initial_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/indicator_dots_start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:keypadButtonSize="72dp"
        app:keypadShowDeleteButton="true"
        app:keypadTextColor="#FFFF"
        app:keypadTextSize="22dp" />


</RelativeLayout>