<resources>

    // Basic strings
    <string name="app_name">MyPHR</string>
    <string name="contacts">Contacts</string>
    <string name="medication">Medication</string>
    <string name="calendar">Calendar</string>
    <string name="appointments">Appointments</string>
    <string name="measurements">Measurements</string>

    // Settings and Details strings
    <string name="edit_icon">Edit Icon</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>

    // Calendar strings
    <string name="last_date_arrow">Last Date Arrow</string>
    <string name="next_date_arrow">Next Date Arrow</string>
    <string name="next_appointment">Next Appointment</string>
    <string name="today_s_medicine">Today\'s Medication</string>

    // Contact strings
    <string name="ctitle">Add a Contact</string>
    <string name="cmessage">Enter the details for your new contact:</string>
    <string name="cname">Name</string>
    <string name="cnotes">Notes</string>
    <string name="cemail">Email</string>
    <string name="cphone">Phone</string>

    // Medicine strings
    <string name="medtitle">Add a Medication</string>
    <string name="medmessage">Enter the details for your new medication:</string>
    <string name="medmessage2">You can schedule reminders later.</string>
    <string name="medname">Name</string>
    <string name="meddescription">Description</string>
    <string name="mednotes">Notes</string>
    <string name="meddose">Dose</string>
    <string name="remindertime">Reminder Time: </string>
    <string name="reminderdate">Starting On: </string>
    <string name="daily">Every Day</string>
    <string name="otherdays">Every Other Day</string>

    <string name="hospital_address">
        Royal Hospital for Children\n
        Endocrine/Metabolic Service\n
        1345 Govan Road\n
        GLASGOW UK\n
        G51 4TF\n\n
        Direct Line +44 141 451 6548\n
        Hospital Switchboard (out of hours)\n
        +44 141 201 0000\n
        Ref: FA/KH\n
    </string>
    <string name="holiday_letter">
        To Whom It May Concern\n\n

        Dear Sir/Madam\n\n

        The patient using this application has an Endocrine condition, and requires a number of items to be available at all times.\n\n
        These items therefore need to be taken as carry-on luggage, and may include the following:\n
         - Needles and syringes\n
         - Medication- oral and/or injectable\n
         - Blood sugar monitors\n
         - Blood sugar testing strips\n
         - Feeding pump/feed sets\n\n

        If you require any further information please contact us on the above number.\n\n

        Yours faithfully\n\n

        Endocrine Service\n
        Royal Hospital for Sick Children, Glasgow,\n\n
        Prof SF Ahmed\n
        Dr M G Shaikh\n
        Dr A Mason\n
        Dr J Wong
    </string>

    // Appointment strings
    <string name="atitle">Add an Appointment</string>
    <string name="amessage">Enter the details for your new appointment:</string>
    <string name="aname">Appointment Title</string>
    <string name="alocation">Location</string>
    <string name="ahour">HH</string>
    <string name="amin">MM</string>
    <string name="apptime">Time</string>
    <string name="adate">Date</string>
    <string name="anotes">Notes</string>
    <string name="amessage2">You can schedule reminders later.</string>
    <string name="delete">Delete</string>
    <string name="appointmentslogo">appointments logo</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="ddmmyyyy">DD/MM/YYYY</string>
    <string name="hhmm">HH:MM</string>
    <string name="general">General</string>
    <string name="descriptive">Descriptive</string>
    <string name="week">One week prior</string>
    <string name="day">One day prior</string>
    <string name="morning">The morning of</string>

    // Measurement strings
    <string name="centile">Centile</string>
    <string name="measmessage">Enter the details for your new measurement:</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="statisticslogo">statistics logo</string>

    // Investigation strings
    <string name="investigationtitle">Add an Investigation</string>
    <string name="investigationmessage">Enter the details of your recent investigation</string>
    <string name="invtitle">Title</string>
    <string name="DD">DD</string>
    <string name="MM">MM</string>
    <string name="YYYY">YYYY</string>
    <string name="invnotes">Notes</string>

    // Login strings
    <string name="change_pin">Please set new PIN</string>
    <string name="save">Save</string>
    <string name="icon_desc">App Icon</string>
    <string name="finger_desc">Fingerprint Icon</string>
    <string name="welcome">Welcome\nPlease set a PIN"</string>
    <string name="finger_unsupported">Your device does not support fingerprint authentication</string>
    <string name="finger_perm">Please enable the fingerprint permission</string>
    <string name="finger_deconfigured">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="lockscreen_off">Please enable lockscreen security in your device\'s Settings</string>
    <string name="forgot">Forgot PIN?</string>

    // Security questions strings
    <string name="question_answer">Enter answer</string>
    <string name="question_1">Please pick a security question</string>
    <string name="question_2">Please pick another security question</string>
    <string name="answer_1">Please answer first security question</string>
    <string name="answer_2">Please answer second security question</string>
    <string name="enter">Enter</string>

    <string-array name="questions_array">
        <item>Mother\'s maiden name</item>
        <item>Father\'s middle name</item>
        <item>Name of first pet</item>
        <item>Favourite film</item>
        <item>Favourite colour</item>
    </string-array>

    <string-array name="questions_array_2">
        <item>First school</item>
        <item>First street</item>
        <item>Favourite actor</item>
        <item>Favourite class</item>
        <item>Favourite sport</item>
    </string-array>

    // Error checking strings
    <string name="confirm">Confirm Delete</string>
    <string name="mark_as_sick_day">Mark as Sick Day</string>
    <string name="markassickday">Would you like to mark this day as a sick day?</string>

    // No X strings
    <string name="no_apps">No appointments have been added yet</string>
    <string name="no_contacts">No contacts have been added yet</string>
    <string name="no_meds">No medications have been added yet</string>
    <string name="no_invest">No investigations have been added yet</string>
    <string name="no_stats">No measurements have been added yet</string>
    <string name="appointment_logo">Appointment Logo</string>
    <string name="contacts_logo">Contacts Logo</string>
    <string name="appointments_logo">Appointments Logo</string>
    <string name="medicine_logo">Medicine Logo</string>
    <string name="delete_button">Delete Button</string>

</resources>